samples/_failures_safe/1761353481_a78263_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dc6551a0.c: In function ‘main’:
./samples/SAFE/__tmp_dc6551a0.c:156:12: error: missing terminating " character
  156 |     printf("========================
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_dc6551a0.c:156:5: error: expected expression at end of input
  156 |     printf("========================
      |     ^~~~~~
./samples/SAFE/__tmp_dc6551a0.c:156:5: error: expected declaration or statement at end of input
